--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <div class="bg-blue-500 p-10 text-center">
         <h1 class="text-4xl text-white">Github Collab</h1>
-    </div>    
+    </div>  
+    <div>
+        <h1 class="bg-black text-white text-4xl mt-5 pl-10">Hello world</h1>
+    </div>  
 </body>
 </html>
